app/static/results.css
a:link,
a:visited,
a:hover,
a:active {
    color: white;
    padding: 14px 25px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
}

.middle-body a:link {
    color: #272343;
}

.middle-body a:visited {
    color: #272343;
}

a:hover {
    color: #FFF1a7;
    text-decoration: underline
}

a:active {
    color: #272343
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropbtn {
    background-color: #86BBD8;
    color: white;
    border: none;
    cursor: pointer;
    pointer-events: none;
    font-family: "DM Sans";
    border-radius: 4px;
}

.dropdown:hover .dropbtn {
    background-color: #FFD803;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #86BBD8;
    padding: 12px 16px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.dropdown:hover .dropdown-content {
    display: block;
}

.logoBtn {
    background:url(/static/logo.png) no-repeat;
    cursor: pointer;
    border: none;
    color: transparent;
}

.circle {
    /* display: inline; */
    justify-content: center;
  align-items: center;
  border-radius: 100%;
  text-align: center;
  display: flex;
    width: 14em;
    height: 14em;
    shape-outside: circle(50%);
    color: white
}

.circle1 {
    background-color: #EF4565;
    width: 13em;
    height: 13em;
    float: left;
    margin-right: 15px;
    margin-top: 150px;
}
.circle2 {
    background-color: #F2994A;
    width: 12em;
    height: 12em;
    float: left;
    /* margin-right: 20px; */
}
.circle3 {
    background-color: #F2C94C;
    float: left;
    width: 17em;
    height: 17em;
    margin-bottom: 30px;
    margin-top: 100px;
    margin-right: 10px;
}
.circle4 {
    background-color: #6FCF97;
    width: 12em;
    height: 12em;
    margin-right: 30px;
    float: left
}
.circle5 {
    background-color: #56CCF2;
    width: 11em;
    height: 11em;
    margin-right: 30px;
    margin-top: 20px;
    float: right;
}
.circle6 {
    background-color: #2F80ED;
    float: right;
    margin-left: 10px;
    margin-bottom: 10px;
}
.circle7 {
    background-color: #BB6BD9;
    width: 13em;
    height: 13em;
    float: right;
    margin-right: 20px;
}
.circle8 {
    background-color: #F784AD;
    width: 12em;
    height: 12em;
    float: right;
    margin-top: 40px;
    /* margin-left: 70px; */
}

h2 {
    font-family: "DM Sans";
    color: #495057;
    text-align: center;
    font-size: 18px;
}

.info {
    white-space: pre
}

.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 30px;
  }
  
  .switch input { 
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 22px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  input:checked + .slider {
    background-color: #ccc;
  }
  
  input:focus + .slider {
    box-shadow: 0 0 1px  #ccc;
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
  }
  
  /* Rounded sliders */
  .slider.round {
    border-radius: 30px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }

  h3 {
    color: white;
    font: DM-Sans;
    font-size: 15px;
    position: absolute;
    align-items: center;
  }
/* 
  @supports (shape-outside: circle(50%)) {
    .circle-content {
      height: 100%;
      margin: 0;
    }
    
    .circle::before,
    .circle-content::before {
      content: "";
      height: 100%;
      width: 50%;
    }
    
    .circle::before {
      float: left;
      shape-outside: polygon(
        0 0, 100% 0, 60% 4%, 40% 10%, 20% 20%, 10% 28.2%, 5% 34.4%, 0 50%,
        5% 65.6%, 10% 71.8%, 20% 80%, 40% 90%, 60% 96%, 100% 100%, 0 100%
      );
    }
    
    .circle-content::before {
      float: right;
      shape-outside: polygon(
        100% 0, 0 0, 40% 4%, 60% 10%, 80% 20%, 90% 28.2%, 95% 34.4%, 100% 50%,
        95% 65.6%, 90% 71.8%, 80% 80%, 60% 90%, 40% 96%, 0 100%, 100% 100%
      );
    }
  } */

  .popular-topics {
    padding-bottom: 150px;
    margin-bottom: 50px;
  }

